Fix: Improved base site on mobile

--- a/app/components/portfolio/Card.module.css
+++ b/app/components/portfolio/Card.module.css
@@ -1,5 +1,5 @@
 .projectCard {
-    width: 18.2vw;
+    width: 350px;
     min-height: 50vh;
     padding: .9vw;
     background-color: var(--background-card);
